feat: implement PlaylistCompositeService.getAll()